<resources>
    <string name="app_name">SportsLeague</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kundan Kumar</string>
    <string name="nav_header_subtitle">kkumar@iastate.edu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_leader_board">View Matches</string>
    <string name="menu_message">Messaging</string>
    <string name="menu_match">Match Play</string>

    <string name="uri">ws://coms-309-kk-09.cs.iastate.edu:8080/websocket/</string>
    <string name="local">http://10.0.2.2:8080</string>
    <string name="remote">http://coms-309-kk-09.cs.iastate.edu:8080/user</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="sports">
        <item>Football</item>
        <item>Basketball</item>
        <item>Soccer</item>
    </string-array>


</resources>